--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,7 +18,10 @@
 #   col_sslcertificatechainfile : '/path/to/intermediate_certificate'   # Set path to certificate chain.
 #   col_sslcertificateKeyfile   : '/path/to/private/key'                # Set path to privatekey.
 #
+# Comment:
+#   - Default settings are based on the letsencrypt location.
+#
 col_servername              : 'collabora.example.com'
-col_sslcertificatefile      : '/path/to/signed_certificate'
-col_sslcertificatechainfile : '/path/to/intermediate_certificate'
-col_sslcertificateKeyfile   : '/path/to/private/key'
+col_sslcertificatefile      : '/etc/letsencrypt/live/{{ col_servername }}/cert.pem'
+col_sslcertificatechainfile : '/etc/letsencrypt/live/{{ col_servername }}/chain.pem'
+col_sslcertificateKeyfile   : '/etc/letsencrypt/live/{{ col_servername }}/privkey.pem'
