--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,33 +14,33 @@
     keyserver: keyserver.ubuntu.com
     id: 0C54D189F4BA284D
 
-- name: "Add CODE package repositories"
-  apt_repository:
-    repo: deb https://www.collaboraoffice.com/repos/CollaboraOnline/CODE-ubuntu2004 ./
-    filename: CollaboraOnline
-    state: present
+#- name: "Add CODE package repositories"
+#  apt_repository:
+#    repo: deb https://www.collaboraoffice.com/repos/CollaboraOnline/CODE-ubuntu2004 ./
+#    filename: CollaboraOnline
+#    state: present
 
-- name: Run the equivalent of "apt-get update" as a separate step
-  apt:
-    update_cache: yes
-    
-- name: "Install packages"
-  apt:
-    pkg:
-    - apache2
-    - loolwsd
-    - code-brand
-    - collaboraoffice*
+#- name: Run the equivalent of "apt-get update" as a separate step
+#  apt:
+#    update_cache: yes
+#    
+#- name: "Install packages"
+#  apt:
+#    pkg:
+#    - apache2
+#    - loolwsd
+#    - code-brand
+#    - collaboraoffice*
 
-- name: "Install packages"
-  apache2_module:
-    name: "{{ item }}"
-    state: present
-  with_items:
-    - proxy
-    - proxy_wstunnel
-    - proxy_http
-    - ssl
+#- name: "Install packages"
+#  apache2_module:
+#    name: "{{ item }}"
+#    state: present
+#  with_items:
+#    - proxy
+#    - proxy_wstunnel
+#    - proxy_http
+#    - ssl
     
 #- name: "Transfer Apache2 templates"
 #  template:
