--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,7 +21,11 @@
 # Comment:
 #   - Default settings are based on the letsencrypt location.
 #
+
 col_servername              : 'collabora.example.com'
 col_sslcertificatefile      : '/etc/letsencrypt/live/{{ col_servername }}/cert.pem'
 col_sslcertificatechainfile : '/etc/letsencrypt/live/{{ col_servername }}/chain.pem'
 col_sslcertificateKeyfile   : '/etc/letsencrypt/live/{{ col_servername }}/privkey.pem'
+
+col_loolwsd_server          : 'cloud.example.com'
+col_loolwsd_admin           : 'ChangePassword!'
