--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -69,3 +69,7 @@
     - 'loolconfig set storage.wopi.host {{ col_loolwsd_server }}'
     - '{{ col_loolwsd_admin }} | loolconfig set-admin-password'
   notify: restart_loolwsd
+
+- name: "Configure loolwsd via commandline"
+  raw: "{{ col_loolwsd_admin }} | loolconfig set-admin-password"  
+  notify: restart_loolwsd
