--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -44,14 +44,17 @@
     
 - name: "Transfer Apache2 templates"
   template:
-    src: collabora-ssl.conf.j2
-    dest: /etc/apache2/sites-available/collabora-ssl.conf
+    src: "{{ item.src }}"
+    dest: "{{ item.dest }}
     owner: root
     group: root
-    mode: 0744
+    mode: 0644
+  with_items:
+    - { src: 'collabora.conf.j2', dest: '/etc/apache2/sites-available/collabora.conf' }
+    - { src: 'collabora-ssl.conf.j2', dest: '/etc/apache2/sites-available/collabora-ssl.conf' }
 
 - name: "Enable site"
-  command: a2ensite collabora-ssl
+  command: a2ensite collabora collabora-ssl 
   notify: restart_apache2
 
 - name: "Disable default site"
