--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -54,9 +54,13 @@
     - { src: 'collabora-ssl.conf.j2', dest: '/etc/apache2/sites-available/collabora-ssl.conf' }
 
 - name: "Enable site"
-  command: a2ensite collabora collabora-ssl 
+  command: a2ensite collabora
   notify: restart_apache2
 
+- name: "Enable site"
+  command: a2ensite collabora-ssl 
+  notify: restart_apache2
+  
 - name: "Disable default site"
   command: "a2dissite {{ item }}"
   with_items:
